# rustgenai

./: .gitignore  Cargo.toml  README.md
src/: google.rs  main.rs
